adjusted some print statements

--- a/linear_algebra.ipynb
+++ b/linear_algebra.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "4773cc87",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "a81cb0e8",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "32f99d1d",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "09008252",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a9124e2c",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,51 @@
       "\n",
       "1.5: Distância Euclidiana\n",
       "  Manual: 5.1962\n",
-      "  NumPy:  5.1962\n",
+      "  NumPy:  5.1962\n"
+     ]
+    }
+   ],
+   "source": [
+    "vetor_a = [1, 2, 3]\n",
+    "vetor_b = [4, 5, 6]\n",
+    "\n",
+    "np_vetor_a = np.array(vetor_a)\n",
+    "np_vetor_b = np.array(vetor_b)\n",
+    "\n",
+    "print(\"\\n 1. VETORES\")\n",
+    "print(f\"vetor_a = {vetor_a}, vetor_b = {vetor_b}\")\n",
+    "\n",
+    "print(\"\\n1.1: Soma\")\n",
+    "print(f\"  Manual: {soma_vetor_manual(vetor_a, vetor_b)}\")\n",
+    "print(f\"  NumPy:  {soma_vetor_numpy(np_vetor_a, np_vetor_b)}\")\n",
+    "\n",
+    "print(\"\\n1.2: Subtração\")\n",
+    "print(f\"  Manual: {subtracao_vetor_manual(vetor_a, vetor_b)}\")\n",
+    "print(f\"  NumPy:  {subtracao_vetor_numpy(np_vetor_a, np_vetor_b)}\")\n",
+    "\n",
+    "print(f\"\\n1.3: Norma (||vetor_a||)\")\n",
+    "print(f\"  Manual: {norma_vetor_manual(vetor_a):.4f}\")\n",
+    "print(f\"  NumPy:  {norma_vetor_numpy(np_vetor_a):.4f}\")\n",
+    "\n",
+    "print(\"\\n1.4: Produto Escalar\")\n",
+    "print(f\"  Manual: {produto_escalar_manual(vetor_a, vetor_b)}\")\n",
+    "print(f\"  NumPy:  {produto_escalar_numpy(np_vetor_a, np_vetor_b)}\")\n",
+    "\n",
+    "print(\"\\n1.5: Distância Euclidiana\")\n",
+    "print(f\"  Manual: {distancia_euclidiana_manual(vetor_a, vetor_b):.4f}\")\n",
+    "print(f\"  NumPy:  {distancia_euclidiana_numpy(np_vetor_a, np_vetor_b):.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24d6051d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "\n",
       "--- 2. MATRIZES ---\n",
@@ -310,56 +354,11 @@
       "  NumPy:\n",
       "[[ 0.09090909 -0.18181818  0.45454545]\n",
       " [ 0.54545455 -0.09090909 -0.27272727]\n",
-      " [-0.18181818  0.36363636  0.09090909]]\n",
-      "\n",
-      "\n",
-      "--- 3. AUTOVALORES E AUTOVETORES ---\n",
-      "\n",
-      "Cálculo para matriz_c:\n",
-      "[[1 2 1]\n",
-      " [0 1 3]\n",
-      " [2 0 1]]\n",
-      "\n",
-      "  Autovalores:\n",
-      "  [ 3.5792478+0.j         -0.2896239+1.72898508j -0.2896239-1.72898508j]\n",
-      "\n",
-      "  Autovetores (colunas):\n",
-      "[[ 0.64352612+0.j         -0.15187682-0.51067814j -0.15187682+0.51067814j]\n",
-      " [ 0.5804052 +0.j          0.68709091+0.j          0.68709091-0.j        ]\n",
-      " [ 0.49900294+0.j         -0.29536296+0.39598998j -0.29536296-0.39598998j]]\n"
+      " [-0.18181818  0.36363636  0.09090909]]\n"
      ]
     }
    ],
    "source": [
-    "vetor_a = [1, 2, 3]\n",
-    "vetor_b = [4, 5, 6]\n",
-    "\n",
-    "np_vetor_a = np.array(vetor_a)\n",
-    "np_vetor_b = np.array(vetor_b)\n",
-    "\n",
-    "print(\"\\n--- 1. VETORES ---\")\n",
-    "print(f\"vetor_a = {vetor_a}, vetor_b = {vetor_b}\")\n",
-    "\n",
-    "print(\"\\n1.1: Soma\")\n",
-    "print(f\"  Manual: {soma_vetor_manual(vetor_a, vetor_b)}\")\n",
-    "print(f\"  NumPy:  {soma_vetor_numpy(np_vetor_a, np_vetor_b)}\")\n",
-    "\n",
-    "print(\"\\n1.2: Subtração\")\n",
-    "print(f\"  Manual: {subtracao_vetor_manual(vetor_a, vetor_b)}\")\n",
-    "print(f\"  NumPy:  {subtracao_vetor_numpy(np_vetor_a, np_vetor_b)}\")\n",
-    "\n",
-    "print(f\"\\n1.3: Norma (||vetor_a||)\")\n",
-    "print(f\"  Manual: {norma_vetor_manual(vetor_a):.4f}\")\n",
-    "print(f\"  NumPy:  {norma_vetor_numpy(np_vetor_a):.4f}\")\n",
-    "\n",
-    "print(\"\\n1.4: Produto Escalar\")\n",
-    "print(f\"  Manual: {produto_escalar_manual(vetor_a, vetor_b)}\")\n",
-    "print(f\"  NumPy:  {produto_escalar_numpy(np_vetor_a, np_vetor_b)}\")\n",
-    "\n",
-    "print(\"\\n1.5: Distância Euclidiana\")\n",
-    "print(f\"  Manual: {distancia_euclidiana_manual(vetor_a, vetor_b):.4f}\")\n",
-    "print(f\"  NumPy:  {distancia_euclidiana_numpy(np_vetor_a, np_vetor_b):.4f}\")\n",
-    "\n",
     "matriz_a = [[1, 2, 3], \n",
     "            [4, 5, 6], \n",
     "            [7, 8, 9]]\n",
@@ -376,7 +375,7 @@
     "np_matriz_b = np.array(matriz_b)\n",
     "np_matriz_c = np.array(matriz_c)\n",
     "\n",
-    "print(\"\\n\\n--- 2. MATRIZES ---\")\n",
+    "print(\"\\n\\n 2. MATRIZES\")\n",
     "print(f\"matriz_a =\\n{np_matriz_a}\")\n",
     "print(f\"\\nmatriz_b =\\n{np_matriz_b}\")\n",
     "print(f\"\\nmatriz_c =\\n{np_matriz_c}\")\n",
@@ -399,9 +398,40 @@
     "\n",
     "print(\"\\n2.5: Inversa (inv(matriz_c))\")\n",
     "print(f\"  Manual (3x3):\\n{np.array(inversa_3x3_manual(matriz_c))}\")\n",
-    "print(f\"  NumPy:\\n{inversa_numpy(np_matriz_c)}\")\n",
-    "\n",
-    "print(\"\\n\\n--- 3. AUTOVALORES E AUTOVETORES ---\")\n",
+    "print(f\"  NumPy:\\n{inversa_numpy(np_matriz_c)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbda22d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "--- 3. AUTOVALORES E AUTOVETORES ---\n",
+      "\n",
+      "Cálculo para matriz_c:\n",
+      "[[1 2 1]\n",
+      " [0 1 3]\n",
+      " [2 0 1]]\n",
+      "\n",
+      "  Autovalores:\n",
+      "  [ 3.5792478+0.j         -0.2896239+1.72898508j -0.2896239-1.72898508j]\n",
+      "\n",
+      "  Autovetores (colunas):\n",
+      "[[ 0.64352612+0.j         -0.15187682-0.51067814j -0.15187682+0.51067814j]\n",
+      " [ 0.5804052 +0.j          0.68709091+0.j          0.68709091-0.j        ]\n",
+      " [ 0.49900294+0.j         -0.29536296+0.39598998j -0.29536296-0.39598998j]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n\\n 3. AUTOVALORES E AUTOVETORES\")\n",
     "\n",
     "print(f\"\\nCálculo para matriz_c:\\n{np_matriz_c}\")\n",
     "autovalores, autovetores = autovalores_autovetores_numpy(np_matriz_c)\n",
