manual implementation of eigenvectors / values

--- a/linear_algebra.ipynb
+++ b/linear_algebra.ipynb
@@ -197,17 +197,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "09008252",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def autovalores_autovetores_numpy(m):\n",
+    "def autovalores_numpy(m):\n",
     "    try:\n",
     "        return np.linalg.eig(m)\n",
     "    except np.linalg.LinAlgError as e:\n",
-    "        raise ValueError(f\"Erro ao calcular autovalores/autovetores: {str(e)}\")"
+    "        raise ValueError(f\"Erro ao calcular autovalores/autovetores: {str(e)}\")\n",
+    "\n",
+    "def _magnitude(v):\n",
+    "    return math.sqrt(sum(x*x for x in v))\n",
+    "\n",
+    "def _normalizar(v):\n",
+    "    mag = _magnitude(v)\n",
+    "    if mag == 0:\n",
+    "        return [0.0, 0.0, 0.0]\n",
+    "    return [x / mag for x in v]\n",
+    "\n",
+    "def _produto_vetorial(v1, v2):\n",
+    "    return [\n",
+    "        v1[1] * v2[2] - v1[2] * v2[1],\n",
+    "        v1[2] * v2[0] - v1[0] * v2[2],\n",
+    "        v1[0] * v2[1] - v1[1] * v2[0]\n",
+    "    ]\n",
+    "\n",
+    "def _resolver_cubica(p, q, r):\n",
+    "    A = (3*q - p*p) / 3\n",
+    "    B = (2*p*p*p - 9*p*q + 27*r) / 27\n",
+    "    \n",
+    "    D = (B/2)**2 + (A/3)**3\n",
+    "    \n",
+    "    tolerancia = 1e-9 \n",
+    "\n",
+    "    if D > tolerancia:\n",
+    "        raise ValueError(\"A matriz pode não ser simétrica ou ter raízes não reais.\")\n",
+    "    \n",
+    "    if D > -tolerancia: \n",
+    "        if abs(B) < tolerancia: \n",
+    "             raizes_t = [0.0, 0.0, 0.0]\n",
+    "        else:\n",
+    "             t1 = -2 * math.copysign(1, B/2) * (abs(B/2))**(1/3)\n",
+    "             t2 = -t1 / 2\n",
+    "             raizes_t = [t1, t2, t2]\n",
+    "    else:\n",
+    "        phi = math.acos(-B / (2 * math.sqrt(-(A/3)**3)))\n",
+    "        t1 = 2 * math.sqrt(-A/3) * math.cos(phi / 3)\n",
+    "        t2 = 2 * math.sqrt(-A/3) * math.cos(phi / 3 + 2 * math.pi / 3)\n",
+    "        t3 = 2 * math.sqrt(-A/3) * math.cos(phi / 3 + 4 * math.pi / 3)\n",
+    "        raizes_t = [t1, t2, t3]\n",
+    "        \n",
+    "    raizes_lambda = [t - p/3 for t in raizes_t]\n",
+    "    \n",
+    "    return raizes_lambda\n",
+    "\n",
+    "def autovalores_manual_3x3(m):\n",
+    "    if len(m) != 3 or len(m[0]) != 3:\n",
+    "        raise ValueError(\"A matriz deve ser 3x3.\")\n",
+    "\n",
+    "    a, b, c = m[0][0], m[0][1], m[0][2]\n",
+    "    d, e = m[1][1], m[1][2]\n",
+    "    f = m[2][2]\n",
+    "    \n",
+    "    p = -(a + d + f)\n",
+    "    q = (a*d - b*b) + (a*f - c*c) + (d*f - e*e)\n",
+    "    r = -(a*(d*f - e*e) - b*(b*f - c*e) + c*(b*e - c*d))\n",
+    "\n",
+    "    try:\n",
+    "        autovalores = _resolver_cubica(p, q, r)\n",
+    "    except ValueError as e:\n",
+    "        raise ValueError(f\"Erro ao calcular autovalores: {str(e)}\")\n",
+    "\n",
+    "    autovalores.sort() \n",
+    "    \n",
+    "    lista_autovetores = []\n",
+    "    tolerancia = 1e-9\n",
+    "\n",
+    "    for val in autovalores:\n",
+    "        linha1 = [a - val, b, c]\n",
+    "        linha2 = [b, d - val, e]\n",
+    "        linha3 = [c, e, f - val]\n",
+    "        \n",
+    "        v_a = _produto_vetorial(linha1, linha2)\n",
+    "        v_b = _produto_vetorial(linha1, linha3)\n",
+    "        v_c = _produto_vetorial(linha2, linha3)\n",
+    "        \n",
+    "        mag_a = _magnitude(v_a)\n",
+    "        mag_b = _magnitude(v_b)\n",
+    "        mag_c = _magnitude(v_c)\n",
+    "        \n",
+    "        if mag_a >= mag_b and mag_a >= mag_c:\n",
+    "            melhor_vetor = v_a\n",
+    "            melhor_mag = mag_a\n",
+    "        elif mag_b >= mag_a and mag_b >= mag_c:\n",
+    "            melhor_vetor = v_b\n",
+    "            melhor_mag = mag_b\n",
+    "        else:\n",
+    "            melhor_vetor = v_c\n",
+    "            melhor_mag = mag_c\n",
+    "\n",
+    "        if melhor_mag < tolerancia:\n",
+    "            if (abs(autovalores[0] - autovalores[1]) < tolerancia and \n",
+    "                abs(autovalores[1] - autovalores[2]) < tolerancia):\n",
+    "                if len(lista_autovetores) == 0:\n",
+    "                    lista_autovetores.append([1.0, 0.0, 0.0])\n",
+    "                elif len(lista_autovetores) == 1:\n",
+    "                    lista_autovetores.append([0.0, 1.0, 0.0])\n",
+    "                else:\n",
+    "                    lista_autovetores.append([0.0, 0.0, 1.0])\n",
+    "                continue \n",
+    "            \n",
+    "            raise ValueError(f\"Autovalor degenerado (repetido) encontrado: {val}. \"\n",
+    "                             \"Esta implementação pura de Python não suporta este caso.\")\n",
+    "\n",
+    "        lista_autovetores.append(_normalizar(melhor_vetor))\n",
+    "        \n",
+    "    vetores_colunas = [\n",
+    "        [lista_autovetores[0][0], lista_autovetores[1][0], lista_autovetores[2][0]],\n",
+    "        [lista_autovetores[0][1], lista_autovetores[1][1], lista_autovetores[2][1]],\n",
+    "        [lista_autovetores[0][2], lista_autovetores[1][2], lista_autovetores[2][2]],\n",
+    "    ]\n",
+    "    \n",
+    "    return (autovalores, vetores_colunas)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40f39a6e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -431,12 +553,28 @@
     }
    ],
    "source": [
-    "print(\"\\n\\n 3. AUTOVALORES E AUTOVETORES\")\n",
+    "print(\"\\n\\n--- 3. AUTOVALORES E AUTOVETORES ---\")\n",
     "\n",
-    "print(f\"\\nCálculo para matriz_c:\\n{np_matriz_c}\")\n",
-    "autovalores, autovetores = autovalores_autovetores_numpy(np_matriz_c)\n",
-    "print(f\"\\n  Autovalores:\\n  {autovalores}\")\n",
-    "print(f\"\\n  Autovetores (colunas):\\n{autovetores}\")"
+    "print(f\"\\n3.1: NumPy (para matriz_c simétrica)\")\n",
+    "print(f\"Cálculo para matriz_c:\\n{np_matriz_c}\")\n",
+    "try:\n",
+    "    vals, vecs = autovalores_numpy(np_matriz_c)\n",
+    "    print(f\"  Autovalores (NumPy):\\n  {vals}\")\n",
+    "    print(f\"  Autovetores (NumPy - colunas):\\n{vecs}\")\n",
+    "except ValueError as e:\n",
+    "    print(f\"  Erro no NumPy: {e}\")\n",
+    "\n",
+    "print(f\"\\n3.2: Python Puro (para matriz_c simétrica)\")\n",
+    "print(f\"Cálculo para matriz_c:\\n{np.array(matriz_c)}\")\n",
+    "\n",
+    "try:\n",
+    "    vals, vecs = autovalores_manual_3x3(matriz_c)\n",
+    "    print(f\"  Autovalores (Manual): {vals}\")\n",
+    "    print(\"  Autovetores (Manual - colunas):\")\n",
+    "    for row in vecs:\n",
+    "        print(f\"    {[round(x, 6) for x in row]}\")\n",
+    "except ValueError as e:\n",
+    "    print(f\"  Erro no Manual: {e}\")"
    ]
   }
  ],
