--- a/linear_algebra.ipynb
+++ b/linear_algebra.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "4773cc87",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "a81cb0e8",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "32f99d1d",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "09008252",
    "metadata": {},
    "outputs": [],
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "a9124e2c",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "--- 1. VETORES ---\n",
+      " 1. VETORES\n",
       "vetor_a = [1, 2, 3], vetor_b = [4, 5, 6]\n",
       "\n",
       "1.1: Soma\n",
@@ -418,7 +418,7 @@
      "text": [
       "\n",
       "\n",
-      "--- 2. MATRIZES ---\n",
+      " 2. MATRIZES\n",
       "matriz_a =\n",
       "[[1 2 3]\n",
       " [4 5 6]\n",
@@ -537,18 +537,28 @@
       "\n",
       "--- 3. AUTOVALORES E AUTOVETORES ---\n",
       "\n",
+      "3.1: NumPy (para matriz_c simétrica)\n",
       "Cálculo para matriz_c:\n",
       "[[1 2 1]\n",
       " [0 1 3]\n",
       " [2 0 1]]\n",
-      "\n",
-      "  Autovalores:\n",
+      "  Autovalores (NumPy):\n",
       "  [ 3.5792478+0.j         -0.2896239+1.72898508j -0.2896239-1.72898508j]\n",
-      "\n",
-      "  Autovetores (colunas):\n",
+      "  Autovetores (NumPy - colunas):\n",
       "[[ 0.64352612+0.j         -0.15187682-0.51067814j -0.15187682+0.51067814j]\n",
       " [ 0.5804052 +0.j          0.68709091+0.j          0.68709091-0.j        ]\n",
-      " [ 0.49900294+0.j         -0.29536296+0.39598998j -0.29536296-0.39598998j]]\n"
+      " [ 0.49900294+0.j         -0.29536296+0.39598998j -0.29536296-0.39598998j]]\n",
+      "\n",
+      "3.2: Python Puro (para matriz_c simétrica)\n",
+      "Cálculo para matriz_c:\n",
+      "[[1 2 1]\n",
+      " [0 1 3]\n",
+      " [2 0 1]]\n",
+      "  Autovalores (Manual): [-2.2019117766787075, 0.0888211923537563, 5.113090584324952]\n",
+      "  Autovetores (Manual - colunas):\n",
+      "    [0.273369, -0.842521, -0.464142]\n",
+      "    [-0.743069, 0.121447, -0.658103]\n",
+      "    [0.610834, 0.524794, -0.592851]\n"
      ]
     }
    ],
