added input entry to vectors

--- a/linear_algebra.ipynb
+++ b/linear_algebra.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "4773cc87",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "a81cb0e8",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "32f99d1d",
    "metadata": {},
    "outputs": [],
@@ -197,16 +197,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "09008252",
    "metadata": {},
    "outputs": [],
    "source": [
     "def auto_val_vec_np(m):\n",
-    "    try:\n",
-    "        return np.linalg.eig(m)\n",
-    "    except np.linalg.LinAlgError as e:\n",
-    "        raise ValueError(f\"Erro ao calcular autovalores/autovetores: {str(e)}\")\n"
+    "        return np.linalg.eig(m)"
    ]
   },
   {
@@ -219,13 +216,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "a9124e2c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Digite os 2 elementos do vetor v_a:\n",
+      "\n",
+      "Digite os 2 elementos do vetor v_b:\n",
+      "\n",
+      " 1. VETORES\n",
+      "v_a = [2.0, 1.0], v_b = [2.0, 1.0]\n",
+      "\n",
+      "1.1: Soma\n",
+      "  Manual: [4.0, 2.0]\n",
+      "  NumPy:  [4. 2.]\n",
+      "\n",
+      "1.2: Subtração\n",
+      "  Manual: [0.0, 0.0]\n",
+      "  NumPy:  [0. 0.]\n",
+      "\n",
+      "1.3: Norma (||v_a||)\n",
+      "  Manual: 2.2361\n",
+      "  NumPy:  2.2361\n",
+      "\n",
+      "1.4: Produto Escalar\n",
+      "  Manual: 5.0\n",
+      "  NumPy:  5.0\n",
+      "\n",
+      "1.5: Distância Euclidiana\n",
+      "  Manual: 0.0000\n",
+      "  NumPy:  0.0000\n"
+     ]
+    }
+   ],
    "source": [
-    "v_a = [1, 2, 3]\n",
-    "v_b = [4, 5, 6]\n",
+    "n = int(input(\"Digite a dimensão (n) dos vetores: \"))\n",
+    "\n",
+    "v_a = []\n",
+    "print(f\"\\nDigite os {n} elementos do vetor v_a:\")\n",
+    "for i in range(n):\n",
+    "    val = float(input(f\"  v_a[{i}]: \"))\n",
+    "    v_a.append(val)\n",
+    "\n",
+    "v_b = []\n",
+    "print(f\"\\nDigite os {n} elementos do vetor v_b:\")\n",
+    "for i in range(n):\n",
+    "    val = float(input(f\"  v_b[{i}]: \"))\n",
+    "    v_b.append(val)\n",
+    "\n",
     "np_v_a = np.array(v_a)\n",
     "np_v_b = np.array(v_b)\n",
     "\n",
@@ -255,10 +298,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "24d6051d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      " 2. MATRIZES\n",
+      "m_a =\n",
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "\n",
+      "m_b =\n",
+      "[[9 8 7]\n",
+      " [6 5 4]\n",
+      " [3 2 1]]\n",
+      "\n",
+      "m_c =\n",
+      "[[1 2 1]\n",
+      " [0 1 3]\n",
+      " [2 0 1]]\n",
+      "\n",
+      "2.1: Soma (m_a + m_b)\n",
+      "  Manual:\n",
+      "[[10 10 10]\n",
+      " [10 10 10]\n",
+      " [10 10 10]]\n",
+      "  NumPy:\n",
+      "[[10 10 10]\n",
+      " [10 10 10]\n",
+      " [10 10 10]]\n",
+      "\n",
+      "2.2: Subtração (m_a - m_b)\n",
+      "  Manual:\n",
+      "[[-8 -6 -4]\n",
+      " [-2  0  2]\n",
+      " [ 4  6  8]]\n",
+      "  NumPy:\n",
+      "[[-8 -6 -4]\n",
+      " [-2  0  2]\n",
+      " [ 4  6  8]]\n",
+      "\n",
+      "2.3: Multiplicação (m_a * m_b)\n",
+      "  Manual:\n",
+      "[[ 30  24  18]\n",
+      " [ 84  69  54]\n",
+      " [138 114  90]]\n",
+      "  NumPy:\n",
+      "[[ 30  24  18]\n",
+      " [ 84  69  54]\n",
+      " [138 114  90]]\n",
+      "\n",
+      "2.4: Determinante (det(m_c))\n",
+      "  Manual (3x3): 11.0000\n",
+      "  NumPy:        11.0000\n",
+      "\n",
+      "2.5: Inversa (inv(m_c))\n",
+      "  Manual (3x3):\n",
+      "[[ 0.09090909 -0.18181818  0.45454545]\n",
+      " [ 0.54545455 -0.09090909 -0.27272727]\n",
+      " [-0.18181818  0.36363636  0.09090909]]\n",
+      "  NumPy:\n",
+      "[[ 0.09090909 -0.18181818  0.45454545]\n",
+      " [ 0.54545455 -0.09090909 -0.27272727]\n",
+      " [-0.18181818  0.36363636  0.09090909]]\n"
+     ]
+    }
+   ],
    "source": [
     "m_a = [[1, 2, 3], \n",
     "       [4, 5, 6], \n",
@@ -304,10 +415,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "fbda22d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      " 3. AUTOVALORES E AUTOVETORES\n",
+      "\n",
+      "Cálculo para m_c:\n",
+      "[[1 2 1]\n",
+      " [0 1 3]\n",
+      " [2 0 1]]\n",
+      "\n",
+      "  Autovalores:\n",
+      "  [ 3.5792478+0.j         -0.2896239+1.72898508j -0.2896239-1.72898508j]\n",
+      "\n",
+      "  Autovetores (colunas):\n",
+      "[[ 0.64352612+0.j         -0.15187682-0.51067814j -0.15187682+0.51067814j]\n",
+      " [ 0.5804052 +0.j          0.68709091+0.j          0.68709091-0.j        ]\n",
+      " [ 0.49900294+0.j         -0.29536296+0.39598998j -0.29536296-0.39598998j]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\n\\n 3. AUTOVALORES E AUTOVETORES\")\n",
     "\n",
