--- a/linear_algebra.ipynb
+++ b/linear_algebra.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "4773cc87",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "a81cb0e8",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "32f99d1d",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
     "def mult_mat_np(m1, m2):\n",
     "    return np.dot(m1, m2)\n",
     "\n",
-    "def det_3x3_m(m):\n",
+    "def det_m(m):\n",
     "    a, b, c = m[0]\n",
     "    d, e, f = m[1]\n",
     "    g, h, i = m[2]\n",
@@ -156,8 +156,8 @@
     "def det_np(m):\n",
     "    return np.linalg.det(m)\n",
     "\n",
-    "def inv_3x3_m(m):\n",
-    "    det = det_3x3_m(m)\n",
+    "def inv_m(m):\n",
+    "    det = det_m(m)\n",
     "    \n",
     "    cof = []\n",
     "    c00 = (m[1][1] * m[2][2]) - (m[1][2] * m[2][1])\n",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "09008252",
    "metadata": {},
    "outputs": [],
@@ -216,44 +216,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "a9124e2c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Digite os 2 elementos do vetor v_a:\n",
-      "\n",
-      "Digite os 2 elementos do vetor v_b:\n",
-      "\n",
-      " 1. VETORES\n",
-      "v_a = [2.0, 1.0], v_b = [2.0, 1.0]\n",
-      "\n",
-      "1.1: Soma\n",
-      "  Manual: [4.0, 2.0]\n",
-      "  NumPy:  [4. 2.]\n",
-      "\n",
-      "1.2: Subtração\n",
-      "  Manual: [0.0, 0.0]\n",
-      "  NumPy:  [0. 0.]\n",
-      "\n",
-      "1.3: Norma (||v_a||)\n",
-      "  Manual: 2.2361\n",
-      "  NumPy:  2.2361\n",
-      "\n",
-      "1.4: Produto Escalar\n",
-      "  Manual: 5.0\n",
-      "  NumPy:  5.0\n",
-      "\n",
-      "1.5: Distância Euclidiana\n",
-      "  Manual: 0.0000\n",
-      "  NumPy:  0.0000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = int(input(\"Digite a dimensão (n) dos vetores: \"))\n",
     "\n",
@@ -298,99 +264,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "24d6051d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      " 2. MATRIZES\n",
-      "m_a =\n",
-      "[[1 2 3]\n",
-      " [4 5 6]\n",
-      " [7 8 9]]\n",
-      "\n",
-      "m_b =\n",
-      "[[9 8 7]\n",
-      " [6 5 4]\n",
-      " [3 2 1]]\n",
-      "\n",
-      "m_c =\n",
-      "[[1 2 1]\n",
-      " [0 1 3]\n",
-      " [2 0 1]]\n",
-      "\n",
-      "2.1: Soma (m_a + m_b)\n",
-      "  Manual:\n",
-      "[[10 10 10]\n",
-      " [10 10 10]\n",
-      " [10 10 10]]\n",
-      "  NumPy:\n",
-      "[[10 10 10]\n",
-      " [10 10 10]\n",
-      " [10 10 10]]\n",
-      "\n",
-      "2.2: Subtração (m_a - m_b)\n",
-      "  Manual:\n",
-      "[[-8 -6 -4]\n",
-      " [-2  0  2]\n",
-      " [ 4  6  8]]\n",
-      "  NumPy:\n",
-      "[[-8 -6 -4]\n",
-      " [-2  0  2]\n",
-      " [ 4  6  8]]\n",
-      "\n",
-      "2.3: Multiplicação (m_a * m_b)\n",
-      "  Manual:\n",
-      "[[ 30  24  18]\n",
-      " [ 84  69  54]\n",
-      " [138 114  90]]\n",
-      "  NumPy:\n",
-      "[[ 30  24  18]\n",
-      " [ 84  69  54]\n",
-      " [138 114  90]]\n",
-      "\n",
-      "2.4: Determinante (det(m_c))\n",
-      "  Manual (3x3): 11.0000\n",
-      "  NumPy:        11.0000\n",
-      "\n",
-      "2.5: Inversa (inv(m_c))\n",
-      "  Manual (3x3):\n",
-      "[[ 0.09090909 -0.18181818  0.45454545]\n",
-      " [ 0.54545455 -0.09090909 -0.27272727]\n",
-      " [-0.18181818  0.36363636  0.09090909]]\n",
-      "  NumPy:\n",
-      "[[ 0.09090909 -0.18181818  0.45454545]\n",
-      " [ 0.54545455 -0.09090909 -0.27272727]\n",
-      " [-0.18181818  0.36363636  0.09090909]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "m_a = [[1, 2, 3], \n",
     "       [4, 5, 6], \n",
-    "       [7, 8, 9]]\n",
+    "       [7, 8, 10]] \n",
     "       \n",
-    "m_b = [[9, 8, 7], \n",
-    "       [6, 5, 4], \n",
-    "       [3, 2, 1]]\n",
-    "\n",
-    "m_c = [[1, 2, 1], \n",
+    "m_b = [[1, 2, 1], \n",
     "       [0, 1, 3], \n",
-    "       [2, 0, 1]]\n",
+    "       [2, 0, 1]] \n",
     "       \n",
     "np_m_a = np.array(m_a)\n",
     "np_m_b = np.array(m_b)\n",
-    "np_m_c = np.array(m_c)\n",
+    "\n",
     "\n",
     "print(\"\\n\\n 2. MATRIZES\")\n",
     "print(f\"m_a =\\n{np_m_a}\")\n",
     "print(f\"\\nm_b =\\n{np_m_b}\")\n",
-    "print(f\"\\nm_c =\\n{np_m_c}\")\n",
     "\n",
     "print(\"\\n2.1: Soma (m_a + m_b)\")\n",
     "print(f\"  Manual:\\n{np.array(soma_mat_m(m_a, m_b))}\")\n",
@@ -404,51 +297,37 @@
     "print(f\"  Manual:\\n{np.array(mult_mat_m(m_a, m_b))}\")\n",
     "print(f\"  NumPy:\\n{mult_mat_np(np_m_a, np_m_b)}\")\n",
     "\n",
-    "print(\"\\n2.4: Determinante (det(m_c))\")\n",
-    "print(f\"  Manual (3x3): {det_3x3_m(m_c):.4f}\")\n",
-    "print(f\"  NumPy:        {det_np(np_m_c):.4f}\")\n",
+    "print(\"\\n2.4: Determinante\")\n",
+    "print(f\"  det(m_a) Manual: {det_m(m_a):.4f}\")\n",
+    "print(f\"  det(m_a) NumPy:  {det_np(np_m_a):.4f}\")\n",
+    "print(f\"  det(m_b) Manual: {det_m(m_b):.4f}\")\n",
+    "print(f\"  det(m_b) NumPy:  {det_np(np_m_b):.4f}\")\n",
     "\n",
-    "print(\"\\n2.5: Inversa (inv(m_c))\")\n",
-    "print(f\"  Manual (3x3):\\n{np.array(inv_3x3_m(m_c))}\")\n",
-    "print(f\"  NumPy:\\n{inv_np(np_m_c)}\")\n"
+    "print(\"\\n2.5: Inversa\")\n",
+    "print(f\"  inv(m_a) Manual:\\n{np.array(inv_m(m_a))}\")\n",
+    "print(f\"  inv(m_a) NumPy:\\n{inv_np(np_m_a)}\")\n",
+    "print(f\"  inv(m_t) Manual:\\n{np.array(inv_m(m_b))}\")\n",
+    "print(f\"  inv(m_b) NumPy:\\n{inv_np(np_m_b)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "fbda22d0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      " 3. AUTOVALORES E AUTOVETORES\n",
-      "\n",
-      "Cálculo para m_c:\n",
-      "[[1 2 1]\n",
-      " [0 1 3]\n",
-      " [2 0 1]]\n",
-      "\n",
-      "  Autovalores:\n",
-      "  [ 3.5792478+0.j         -0.2896239+1.72898508j -0.2896239-1.72898508j]\n",
-      "\n",
-      "  Autovetores (colunas):\n",
-      "[[ 0.64352612+0.j         -0.15187682-0.51067814j -0.15187682+0.51067814j]\n",
-      " [ 0.5804052 +0.j          0.68709091+0.j          0.68709091-0.j        ]\n",
-      " [ 0.49900294+0.j         -0.29536296+0.39598998j -0.29536296-0.39598998j]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"\\n\\n 3. AUTOVALORES E AUTOVETORES\")\n",
     "\n",
-    "print(f\"\\nCálculo para m_c:\\n{np_m_c}\")\n",
-    "auto_val, auto_vec = auto_val_vec_np(np_m_c)\n",
-    "print(f\"\\n  Autovalores:\\n  {auto_val}\")\n",
-    "print(f\"\\n  Autovetores (colunas):\\n{auto_vec}\")"
+    "print(f\"\\nCálculo para m_a:\\n{np_m_a}\")\n",
+    "auto_val_a, auto_vec_a = auto_val_vec_np(np_m_a)\n",
+    "print(f\"\\n  Autovalores:\\n  {auto_val_a}\")\n",
+    "print(f\"\\n  Autovetores (colunas):\\n{auto_vec_a}\")\n",
+    "\n",
+    "print(f\"\\nCálculo para m_b:\\n{np_m_b}\")\n",
+    "auto_val_b, auto_vec_b = auto_val_vec_np(np_m_b)\n",
+    "print(f\"\\n  Autovalores:\\n  {auto_val_b}\")\n",
+    "print(f\"\\n  Autovetores (colunas):\\n{auto_vec_b}\")"
    ]
   }
  ],
