--- a/linear_algebra.ipynb
+++ b/linear_algebra.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4773cc87",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a81cb0e8",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,19 @@
     "    return norma_vet_m(vet_sub)\n",
     "\n",
     "def dist_euc_np(v1, v2):\n",
-    "    return np.linalg.norm(np.subtract(v1, v2))"
+    "    return np.linalg.norm(np.subtract(v1, v2))\n",
+    "\n",
+    "def mult_mat_vet_m(m, v):\n",
+    "    res = []\n",
+    "    for linha in m:\n",
+    "        res.append(prod_esc_m(linha, v))\n",
+    "    return res\n",
+    "\n",
+    "def normalizar_vet_m(v):\n",
+    "    norma = norma_vet_m(v)\n",
+    "    if norma == 0:\n",
+    "        return v\n",
+    "    return [elem / norma for elem in v]"
    ]
   },
   {
@@ -84,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "32f99d1d",
    "metadata": {},
    "outputs": [],
@@ -202,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def auto_val_vec_np(m):\n",
+    "def auto_val_vet_np(m):\n",
     "        return np.linalg.eig(m)"
    ]
   },
@@ -216,10 +228,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a9124e2c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Digite os 3 elementos do vetor v_a:\n",
+      "\n",
+      "Digite os 3 elementos do vetor v_b:\n",
+      "\n",
+      " 1. VETORES\n",
+      "v_a = [3.0, 2.0, 2.0], v_b = [2.0, 2.0, 2.0]\n",
+      "\n",
+      "1.1: Soma\n",
+      "  Manual: [5.0, 4.0, 4.0]\n",
+      "  NumPy:  [5. 4. 4.]\n",
+      "\n",
+      "1.2: Subtração\n",
+      "  Manual: [1.0, 0.0, 0.0]\n",
+      "  NumPy:  [1. 0. 0.]\n",
+      "\n",
+      "1.3: Norma (||v_a||)\n",
+      "  Manual: 4.123105625617661\n",
+      "  NumPy:  4.123105625617661\n",
+      "\n",
+      "1.4: Produto Escalar\n",
+      "  Manual: 14.0\n",
+      "  NumPy:  14.0\n",
+      "\n",
+      "1.5: Distância Euclidiana\n",
+      "  Manual: 1.0\n",
+      "  NumPy:  1.0\n"
+     ]
+    }
+   ],
    "source": [
     "n = int(input(\"Digite a dimensão (n) dos vetores: \"))\n",
     "\n",
@@ -250,24 +296,97 @@
     "print(f\"  NumPy:  {sub_vet_np(np_v_a, np_v_b)}\")\n",
     "\n",
     "print(f\"\\n1.3: Norma (||v_a||)\")\n",
-    "print(f\"  Manual: {norma_vet_m(v_a):.4f}\")\n",
-    "print(f\"  NumPy:  {norma_vet_np(np_v_a):.4f}\")\n",
+    "print(f\"  Manual: {norma_vet_m(v_a)}\")\n",
+    "print(f\"  NumPy:  {norma_vet_np(np_v_a)}\")\n",
     "\n",
     "print(\"\\n1.4: Produto Escalar\")\n",
     "print(f\"  Manual: {prod_esc_m(v_a, v_b)}\")\n",
     "print(f\"  NumPy:  {prod_esc_np(np_v_a, np_v_b)}\")\n",
     "\n",
     "print(\"\\n1.5: Distância Euclidiana\")\n",
-    "print(f\"  Manual: {dist_euc_m(v_a, v_b):.4f}\")\n",
-    "print(f\"  NumPy:  {dist_euc_np(np_v_a, np_v_b):.4f}\")\n"
+    "print(f\"  Manual: {dist_euc_m(v_a, v_b)}\")\n",
+    "print(f\"  NumPy:  {dist_euc_np(np_v_a, np_v_b)}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "24d6051d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      " 2. MATRIZES\n",
+      "m_a =\n",
+      "[[ 1  2  3]\n",
+      " [ 4  5  6]\n",
+      " [ 7  8 10]]\n",
+      "\n",
+      "m_b =\n",
+      "[[1 2 1]\n",
+      " [0 1 3]\n",
+      " [2 0 1]]\n",
+      "\n",
+      "2.1: Soma (m_a + m_b)\n",
+      "  Manual:\n",
+      "[[ 2  4  4]\n",
+      " [ 4  6  9]\n",
+      " [ 9  8 11]]\n",
+      "  NumPy:\n",
+      "[[ 2  4  4]\n",
+      " [ 4  6  9]\n",
+      " [ 9  8 11]]\n",
+      "\n",
+      "2.2: Subtração (m_a - m_b)\n",
+      "  Manual:\n",
+      "[[0 0 2]\n",
+      " [4 4 3]\n",
+      " [5 8 9]]\n",
+      "  NumPy:\n",
+      "[[0 0 2]\n",
+      " [4 4 3]\n",
+      " [5 8 9]]\n",
+      "\n",
+      "2.3: Multiplicação (m_a * m_b)\n",
+      "  Manual:\n",
+      "[[ 7  4 10]\n",
+      " [16 13 25]\n",
+      " [27 22 41]]\n",
+      "  NumPy:\n",
+      "[[ 7  4 10]\n",
+      " [16 13 25]\n",
+      " [27 22 41]]\n",
+      "\n",
+      "2.4: Determinante\n",
+      "  det(m_a) Manual: -3\n",
+      "  det(m_a) NumPy:  -2.9999999999999996\n",
+      "  det(m_b) Manual: 11\n",
+      "  det(m_b) NumPy:  11.000000000000002\n",
+      "\n",
+      "2.5: Inversa\n",
+      "  inv(m_a) Manual:\n",
+      "[[-0.66666667 -1.33333333  1.        ]\n",
+      " [-0.66666667  3.66666667 -2.        ]\n",
+      " [ 1.         -2.          1.        ]]\n",
+      "  inv(m_a) NumPy:\n",
+      "[[-0.66666667 -1.33333333  1.        ]\n",
+      " [-0.66666667  3.66666667 -2.        ]\n",
+      " [ 1.         -2.          1.        ]]\n",
+      "  inv(m_t) Manual:\n",
+      "[[ 0.09090909 -0.18181818  0.45454545]\n",
+      " [ 0.54545455 -0.09090909 -0.27272727]\n",
+      " [-0.18181818  0.36363636  0.09090909]]\n",
+      "  inv(m_b) NumPy:\n",
+      "[[ 0.09090909 -0.18181818  0.45454545]\n",
+      " [ 0.54545455 -0.09090909 -0.27272727]\n",
+      " [-0.18181818  0.36363636  0.09090909]]\n"
+     ]
+    }
+   ],
    "source": [
     "m_a = [[1, 2, 3], \n",
     "       [4, 5, 6], \n",
@@ -298,10 +417,10 @@
     "print(f\"  NumPy:\\n{mult_mat_np(np_m_a, np_m_b)}\")\n",
     "\n",
     "print(\"\\n2.4: Determinante\")\n",
-    "print(f\"  det(m_a) Manual: {det_m(m_a):.4f}\")\n",
-    "print(f\"  det(m_a) NumPy:  {det_np(np_m_a):.4f}\")\n",
-    "print(f\"  det(m_b) Manual: {det_m(m_b):.4f}\")\n",
-    "print(f\"  det(m_b) NumPy:  {det_np(np_m_b):.4f}\")\n",
+    "print(f\"  det(m_a) Manual: {det_m(m_a)}\")\n",
+    "print(f\"  det(m_a) NumPy:  {det_np(np_m_a) }\")\n",
+    "print(f\"  det(m_b) Manual: {det_m(m_b)}\")\n",
+    "print(f\"  det(m_b) NumPy:  {det_np(np_m_b)}\")\n",
     "\n",
     "print(\"\\n2.5: Inversa\")\n",
     "print(f\"  inv(m_a) Manual:\\n{np.array(inv_m(m_a))}\")\n",
@@ -315,20 +434,67 @@
    "execution_count": null,
    "id": "fbda22d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      " 3. AUTOVALORES E AUTOVETORES\n",
+      "\n",
+      "Cálculo para m_a:\n",
+      "[[ 1  2  3]\n",
+      " [ 4  5  6]\n",
+      " [ 7  8 10]]\n",
+      "\n",
+      "  Autovalores:\n",
+      "  [16.70749332 -0.90574018  0.19824686]\n",
+      "\n",
+      "  Autovetores (colunas):\n",
+      "[[-0.22351336 -0.86584578  0.27829649]\n",
+      " [-0.50394563  0.0856512  -0.8318468 ]\n",
+      " [-0.83431444  0.4929249   0.48018951]]\n",
+      "\n",
+      "  Manual (Autovalor Dominante): 16.70749331612475\n",
+      "  Manual (Autovetor Dominante): [0.22351335772785175, 0.5039456275263904, 0.8343144391740167]\n",
+      "\n",
+      "  Manual (Autovalor Mínimo): 0.19824686339701011\n",
+      "  Manual (Autovetor Mínimo): [-0.2782964859805726, 0.8318468022052949, -0.48018950795669196]\n",
+      "\n",
+      "Cálculo para m_b:\n",
+      "[[1 2 1]\n",
+      " [0 1 3]\n",
+      " [2 0 1]]\n",
+      "\n",
+      "  Autovalores:\n",
+      "  [ 3.5792478+0.j         -0.2896239+1.72898508j -0.2896239-1.72898508j]\n",
+      "\n",
+      "  Autovetores (colunas):\n",
+      "[[ 0.64352612+0.j         -0.15187682-0.51067814j -0.15187682+0.51067814j]\n",
+      " [ 0.5804052 +0.j          0.68709091+0.j          0.68709091-0.j        ]\n",
+      " [ 0.49900294+0.j         -0.29536296+0.39598998j -0.29536296-0.39598998j]]\n",
+      "\n",
+      "  Manual (Autovalor Dominante): 3.5792478029701225\n",
+      "  Manual (Autovetor Dominante): [0.6435261223011004, 0.5804051970119235, 0.49900294307514814]\n",
+      "\n",
+      "  Manual (Autovalor Mínimo): -25.748354343131886\n",
+      "  Manual (Autovetor Mínimo): [0.1853113142082146, 0.7720697465074534, -0.6079210667137148]\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\n\\n 3. AUTOVALORES E AUTOVETORES\")\n",
     "\n",
-    "\n",
     "print(f\"\\nCálculo para m_a:\\n{np_m_a}\")\n",
-    "auto_val_a, auto_vec_a = auto_val_vec_np(np_m_a)\n",
+    "auto_val_a, auto_vet_a = auto_val_vet_np(np_m_a)\n",
     "print(f\"\\n  Autovalores:\\n  {auto_val_a}\")\n",
-    "print(f\"\\n  Autovetores (colunas):\\n{auto_vec_a}\")\n",
+    "print(f\"\\n  Autovetores (colunas):\\n{auto_vet_a}\")\n",
     "\n",
     "print(f\"\\nCálculo para m_b:\\n{np_m_b}\")\n",
-    "auto_val_b, auto_vec_b = auto_val_vec_np(np_m_b)\n",
+    "auto_val_b, auto_vet_b = auto_val_vet_np(np_m_b)\n",
     "print(f\"\\n  Autovalores:\\n  {auto_val_b}\")\n",
-    "print(f\"\\n  Autovetores (colunas):\\n{auto_vec_b}\")"
+    "print(f\"\\n  Autovetores (colunas):\\n{auto_vet_b}\")"
    ]
   }
  ],
