não lembro também desculpa

--- a/linear_algebra.ipynb
+++ b/linear_algebra.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a81cb0e8",
    "metadata": {},
    "outputs": [],
@@ -71,19 +71,7 @@
     "    return norma_vet_m(vet_sub)\n",
     "\n",
     "def dist_euc_np(v1, v2):\n",
-    "    return np.linalg.norm(np.subtract(v1, v2))\n",
-    "\n",
-    "def mult_mat_vet_m(m, v):\n",
-    "    res = []\n",
-    "    for linha in m:\n",
-    "        res.append(prod_esc_m(linha, v))\n",
-    "    return res\n",
-    "\n",
-    "def normalizar_vet_m(v):\n",
-    "    norma = norma_vet_m(v)\n",
-    "    if norma == 0:\n",
-    "        return v\n",
-    "    return [elem / norma for elem in v]"
+    "    return np.linalg.norm(np.subtract(v1, v2))"
    ]
   },
   {
